--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>new site</title>
-    <link href="./css/main.4e4b3a9ce0caa783da23.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="site-container">
-      <header class="header">sdfsdfsdvsdfs dfs</header>
-      <img src="./img/2.d5a7ed066e580bbdc267eb389fcc15fa.jpg" alt="img">
-    </div>
-    <script src="./js/951.a878b9377f7fa3b2593a.js"></script>
-    <script src="./js/main.210ab6d8e842e5be0853.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <title>new site</title>
+<link href="./css/main.css" rel="stylesheet"></head>
+<body>
+  <div class="site-container">
+    <header class="header">
+      sdfsdfsdvsdfs dfs
+    </header>
+    <img src="./img/2.jpg" alt="img">
+  </div>
+<script src="./js/vendors-node_modules_focus-visible_dist_focus-visible_js-node_modules_html-loader_dist_runtim-ca6faf.js"></script><script src="./js/main.js"></script></body>
 </html>
